# tdp-ui-rs

./: .gitignore  Cargo.toml  README.md  generator.sh  tdp-server_0.1.0_openapi.json  tdp-server_0.1.0_openapi.json.sha256
crates/api/: Cargo.toml  README.md
crates/api/.openapi-generator/: FILES
crates/api/docs/: Component.md  ComponentUpdate.md  ComponentUpdateResponse.md  ComponentsApi.md  DefaultApi.md  DeployApi.md  DeployRequest.md  DeployStatus.md  DeploymentLog.md  DeploymentLogWithOperations.md  FilterTypeEnum.md  Operation.md  OperationApi.md  OperationLog.md  OperationsRequest.md  PlanApi.md  ResumeRequest.md  Service.md  ServiceUpdate.md  ServiceUpdateResponse.md  ServicesApi.md
crates/api/src/apis/: components_api.rs  configuration.rs  default_api.rs  deploy_api.rs  mod.rs  operation_api.rs  plan_api.rs  services_api.rs
crates/api/src/models/: component.rs  component_update.rs  component_update_response.rs  deploy_request.rs  deploy_status.rs  deployment_log.rs  deployment_log_with_operations.rs  filter_type_enum.rs  http_validation_error.rs  mod.rs  operation.rs  operation_log.rs  operations_request.rs  resume_request.rs  service.rs  service_update.rs  service_update_response.rs  state_enum.rs  validation_error.rs
crates/ui/: Cargo.toml  index.html
crates/ui/src/: app.rs  main.rs
crates/ui/src/components/: login.rs  logout.rs  mod.rs  service.rs
crates/ui/src/components/editor/: mod.rs
crates/ui/src/components/navbar/: mod.rs  section.rs  section_item.rs
crates/ui/src/hooks/: mod.rs
crates/ui/src/routes/: mod.rs
env/config/: realm.json
