[package]
name = "tdp-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7", features = ["HeroiconsSolidBeaker", "HeroiconsSolidCog6Tooth"] }
gloo-timers = "0.2.5"
log = { version = "^0.4", features = [] }
wasm-logger = "^0.2"
tdp-api = { path = "../api/"}
yew-router = "0.17.0"
chrono = { version = "0.4", features = ["wasmbind"] }
yew-oauth2 = { version = "0.5",  features = ["openid"] }
# check if still needed in yew-oauth2 > 0.5
openidconnect = { version = "2.2", default-features = false, features = ["reqwest", "rustls-tls", "rustcrypto"] }
tree-sitter = { version = "1.3.0", package = "web-tree-sitter-sg", default-features = false, features = ["web"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys =  { version = "^0.3.60", features = ["HtmlTextAreaElement"] }
serde_yaml = "0.9"


[package.metadata.cargo-machete]
ignored = ["chrono", "openidconnect"]
